# esp32-car-control

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  VERSION  exclude_arm_asm.py  get_version.py  platformio.ini
docs/: esp32-s3-info.md  power-steering-torque-equations.md  volvo-xc60-eps-can-bus.md
docs/schematics/: 12v-to-3v3-regulator.md  master-complete.md  master-custom-pcb.md  pwm-controller-interface.md  rpm-input-circuit.md  vss-input-circuit.md  water-temp-input-circuit.md
hardware/master-pcb/: BOM_JLCPCB.csv  CPL_JLCPCB_template.csv  README.md  master-pcb.kicad_pcb  master-pcb.kicad_pro  master-pcb.kicad_sch
hardware/master-pcb-easyeda/: BOM_EasyEDA.csv  QUICKSTART.md  README.md  board_outline.json  easyeda_project_import.json  project_reference_data.json  schematic_netlist.txt
include/: lv_conf.h
include/master/: ota_handler.h  sd_handler.h  spi_master.h  virtual_memory.h
include/shared/: config.h  ota_protocol.h  protocol.h  version.h
include/slave/: ota_handler.h  ota_popup.h  spi_ota.h  spi_slave.h
src/: main.cpp
src/master/: can_handler.cpp  can_handler.h  encoder_mux.cpp  encoder_mux.h  i2c_master.cpp  i2c_master.h  main.cpp  ota_handler.cpp  rpm_counter.cpp  rpm_counter.h  sd_handler.cpp  spi_master.cpp  tasks.cpp  tasks.h  virtual_memory.cpp  vss_counter.cpp  vss_counter.h  water_temp.cpp  water_temp.h
tools/: generate_background.py
tools/ota-pusher/: CMakeLists.txt
tools/ota-pusher/src/: main.cpp  mdns_discovery.cpp  mdns_discovery.h  ota_protocol.cpp  ota_protocol.h  package.cpp  package.h
(+64 files in other folders)
